@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing true
'skinparam linetype ortho
skinparam classAttributeIconSize 0
hide circle
hide methods
'left to right direction

class User {
    name
    email
    phone
}

class Role {
    designation
}

class Item {
    condition
    image
}

class Category {
    designation
}

class Advertisement{
    title
    description
    date
    municipality
    status
    '(active, closed)
}

class ReservationAttempt {
    status
    '(pending, canceled, rejected, accepted, donated)
    date
}


class Tip {
    title
    content
    likeCount
    favoriteCount
}

class Interaction {
    like
    favorite
}

note bottom of ReservationAttempt
Status: Pending, Canceled, Rejected,
Accepted, Donated
endnote

note bottom of Advertisement
Status: Active, Closed, Inactive
endnote

Item "0..*" -left- "1" Category : belongs to a \t >
Advertisement "1" -- "1" Item : contains an \t >
User "1" -- "0..*" Advertisement : create >
User "1" -- "0..*" ReservationAttempt : references <
ReservationAttempt "0..*" -- "1" Advertisement : receives <
User "1" -- "0..*" Interaction : makes >
Interaction "0..*" -left- "1" Tip : references >
User "0..*" - "1" Role : has \t >
@enduml